Re-did the App/Modal so that the page isn't scrollable after the Modal has transitioned open. Re-worked Timeline to fake expected props and stop the unwanted progress/handle jumping.

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -59,7 +59,10 @@
 }
 
 html.hasOpen {
+  height: 100%;
   overscroll-behavior-y: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 /* @keyframes pan {
@@ -86,27 +89,18 @@ html.hasOpen > body {
 html.hasOpen > body::before,
 html.hasOpen > body::after,
 html.hasOpen > body > :not(.portal) {
-  opacity: 0;
+  display: none;
   pointer-events: none;
+}
+
+html.hasOpening > body::before,
+html.hasOpening > body::after,
+html.hasOpening > body > :not(.portal) {
+  display: block;
+  opacity: 0;
   transition: opacity 0.5s;
 }
 
-/* @keyframes disappear {
-  0% {
-    opacity: 1;
-    height: initial;
-  }
-  100% {
-    opacity: 0;
-    height: 0;
-  }
-} */
-
-/* html.hasOpen > body > :not(.portal) {
-  animation: disappear 0.5s forwards;
-  animation: disappear 0.5s forwards;
-} */
-
-html.hasOpen .open svg {
+html.hasOpening .open svg {
   opacity: 0;
 }
