--- a/src/components/Player/styles.css
+++ b/src/components/Player/styles.css
@@ -5,13 +5,11 @@
   color: var(--pod-white, white);
   font-family: ABCSans;
   font-weight: var(--pod-font-weight-normal);
-  -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   contain: strict;
 }
 
